--- a/index.html
+++ b/index.html
@@ -1,82 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Marietta Research Solutions</title>
-  <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8">
+    <title>Marietta Research Solutions</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <header>
+<header>
     <h1>Marietta Research Solutions</h1>
-    <p class="tagline">
-      Personalized professional solutions for individuals and small businesses
-    </p>
-  </header>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="services.html">Services</a>
+        <a href="contact.html">Contact</a>
+    </nav>
+</header>
 
-  <main>
-
-    <section>
-      <h2>About Us</h2>
-      <p>
-        Marietta Research Solutions is a small, client-focused personnel and
-        professional services firm based in Marietta, Georgia. We provide
-        one-to-one, personalized solutions by combining senior-level expertise
-        with a flexible consultant model.
-      </p>
-    </section>
-
-    <section>
-      <h2>Services</h2>
-      <ul>
-        <li>Electrical Engineering Consulting</li>
-        <li>Paralegal Services</li>
-        <li>Patent Drafting Support</li>
-        <li>Artificial Intelligence Applications for Small Businesses</li>
-        <li>SBIR Grant Writing Support</li>
-        <li>Prison Consulting and Advocacy Support (Non-Legal)</li>
-        <li>Form Preparation Assistance</li>
-        <li>Notary Public Services (Cobb County, GA)</li>
-      </ul>
-    </section>
-
-    <section>
-      <h2>Focus Areas</h2>
-      <p>
-        Our current strategic focus includes applying AI solutions to small law
-        firms and supporting small businesses pursuing SBIR and other innovation
-        grants.
-      </p>
-    </section>
-
-    <section>
-      <h2>Location</h2>
-      <p>
-        1640 Powers Ferry Road SE<br />
-        Marietta, GA 30067
-      </p>
-      <p class="note">
-        Services provided by appointment and remotely as appropriate.
-      </p>
-    </section>
-
-    <section>
-      <h2>Contact</h2>
-      <p>
-        Email: <a href="mailto:info@mariettaresearchsolutions.com">
-        info@mariettaresearchsolutions.com</a>
-      </p>
-    </section>
-
-  </main>
-
-  <footer>
+<div class="container">
+    <h2>Personalized Professional Solutions</h2>
     <p>
-      © 2026 Marietta Research Solutions · Sole Proprietorship ·
-      Non-legal services where applicable
+        Marietta Research Solutions is a small, client-focused professional services firm
+        providing one-to-one support for individuals, small businesses, and professional practices.
     </p>
-  </footer>
+
+    <p>
+        We combine senior-level technical expertise, legal-support services, and practical
+        applications of artificial intelligence—without the overhead of large firms.
+    </p>
+</div>
+
+<footer>
+    © 2026 Marietta Research Solutions | Marietta, Georgia
+</footer>
 
 </body>
 </html>
