--- a/index.html
+++ b/index.html
@@ -16,21 +16,34 @@
     </nav>
 </header>
 
-<div class="container">
+<div class="hero">
     <h2>Personalized Professional Solutions</h2>
+    <p>Helping small businesses, law firms, inventors, and individuals achieve their goals efficiently.</p>
+
+    <div class="hero-icons">
+        <img class="hero-icon" src="images/icons/engineering.svg" alt="Engineering Icon" title="Engineering Consulting">
+        <img class="hero-icon" src="images/icons/paralegal.svg" alt="Paralegal Icon" title="Paralegal Services">
+        <img class="hero-icon" src="images/icons/patent.svg" alt="Patent Icon" title="Patent Drafting Support">
+        <img class="hero-icon" src="images/icons/ai.svg" alt="AI Icon" title="AI Services">
+        <img class="hero-icon" src="images/icons/prison.svg" alt="Prison Consulting Icon" title="Prison Consulting">
+        <img class="hero-icon" src="images/icons/sbir.svg" alt="SBIR Icon" title="SBIR Grant Support">
+        <img class="hero-icon" src="images/icons/notary.svg" alt="Notary Icon" title="Notary Services">
+    </div>
+</div>
+
+<div class="container">
     <p>
-        Marietta Research Solutions is a small, client-focused professional services firm
+        Marietta Research Solutions is a small, client-focused professional services firm 
         providing one-to-one support for individuals, small businesses, and professional practices.
     </p>
-
     <p>
-        We combine senior-level technical expertise, legal-support services, and practical
-        applications of artificial intelligence—without the overhead of large firms.
+        We combine senior-level expertise in electrical engineering, paralegal support, patent drafting, AI applications, 
+        prison consulting, SBIR grant writing, and notary services—without the overhead of large firms.
     </p>
 </div>
 
 <footer>
-    © 2026 Marietta Research Solutions | Marietta, Georgia
+    © 2026 Marietta Research Solutions | Marietta, GA
 </footer>
 
 </body>
