--- a/services.html
+++ b/services.html
@@ -17,15 +17,45 @@
 </header>
 
 <div class="container">
-    <ul>
-        <li><a href="engineering.html">Electrical Engineering Consulting</a></li>
-        <li><a href="paralegal.html">Paralegal Services</a></li>
-        <li><a href="patents.html">Patent Drafting Support</a></li>
-        <li><a href="ai.html">AI for Small Businesses & Law Firms</a></li>
-        <li><a href="prison-consulting.html">Prison Consulting</a></li>
-        <li><a href="sbir.html">SBIR Grant Writing Support</a></li>
-        <li><a href="notary.html">Notary Public Services</a></li>
-    </ul>
+    <p>Marietta Research Solutions provides specialized services for small businesses, law firms, and individuals. Click on each service to learn more.</p>
+
+    <div class="services-grid">
+        <div class="service-card">
+            <img class="icon" src="images/icons/engineering.svg" alt="Engineering Icon">
+            <h3><a href="engineering.html">Electrical Engineering Consulting</a></h3>
+            <p>Expert guidance in antennas, radar, telecommunications, and robotics for startups and small businesses.</p>
+        </div>
+        <div class="service-card">
+            <img class="icon" src="images/icons/paralegal.svg" alt="Paralegal Icon">
+            <h3><a href="paralegal.html">Paralegal Services</a></h3>
+            <p>Document prep and administrative support for small law firms and solo practitioners. Non-legal advice.</p>
+        </div>
+        <div class="service-card">
+            <img class="icon" src="images/icons/patent.svg" alt="Patent Icon">
+            <h3><a href="patents.html">Patent Drafting Support</a></h3>
+            <p>Technical drafting, prior art research, and figures preparation for inventors and small businesses.</p>
+        </div>
+        <div class="service-card">
+            <img class="icon" src="images/icons/ai.svg" alt="AI Icon">
+            <h3><a href="ai.html">AI for Small Businesses & Law Firms</a></h3>
+            <p>Practical AI solutions for document automation, workflow efficiency, and business analysis.</p>
+        </div>
+        <div class="service-card">
+            <img class="icon" src="images/icons/prison.svg" alt="Prison Consulting Icon">
+            <h3><a href="prison-consulting.html">Prison Consulting</a></h3>
+            <p>Documentation, procedural guidance, and reentry planning for incarcerated individuals and families.</p>
+        </div>
+        <div class="service-card">
+            <img class="icon" src="images/icons/sbir.svg" alt="SBIR Icon">
+            <h3><a href="sbir.html">SBIR Grant Writing Support</a></h3>
+            <p>Technical and administrative support for SBIR/STTR proposals to help startups submit strong applications.</p>
+        </div>
+        <div class="service-card">
+            <img class="icon" src="images/icons/notary.svg" alt="Notary Icon">
+            <h3><a href="notary.html">Notary Public Services</a></h3>
+            <p>Commissioned Notary Public in Cobb County. By appointment at our Marietta office.</p>
+        </div>
+    </div>
 </div>
 
 <footer>
