--- a/engineering.html
+++ b/engineering.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Electrical Engineering Consulting</title>
+    <title>Electrical Engineering Consulting | Marietta Research Solutions</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -18,17 +18,26 @@
 
 <div class="container">
     <p>
-        We provide senior-level electrical engineering consulting with national expertise
-        in advanced technical domains.
+        Marietta Research Solutions provides senior-level electrical engineering consulting 
+        for small businesses, startups, and technical teams. Our consultants bring decades 
+        of national expertise in advanced engineering disciplines.
     </p>
 
     <ul>
-        <li>Antennas and propagation</li>
+        <li>Antennas and propagation analysis</li>
         <li>Radar cross-section reduction</li>
         <li>Numerical modeling and simulation</li>
-        <li>Telecommunications systems</li>
-        <li>Technical analysis and expert support</li>
+        <li>Telecommunication systems design and optimization</li>
+        <li>FANUC robotic system programming</li>
+        <li>Technical reports, white papers, and expert support</li>
     </ul>
+
+    <p>
+        Whether you are developing new technology, writing SBIR proposals, or need expert review, 
+        we provide focused, project-specific support to meet your goals efficiently.
+    </p>
+
+    <p><strong>Disclaimer:</strong> Services are technical consulting only and do not constitute legal or financial advice.</p>
 </div>
 
 <footer>
