--- a/paralegal.html
+++ b/paralegal.html
@@ -18,20 +18,25 @@
 
 <div class="container">
     <p>
-        Marietta Research Solutions provides professional paralegal support
-        to attorneys, small law firms, and individuals.
+        Our paralegal services support small law firms, solo practitioners, and individuals 
+        who need reliable administrative and document preparation assistance. We focus on 
+        efficiency, accuracy, and compliance.
     </p>
 
     <ul>
         <li>Legal research and document preparation</li>
         <li>Litigation and transactional support</li>
-        <li>Case organization and filing preparation</li>
-        <li>Administrative and procedural assistance</li>
+        <li>Case organization, filing preparation, and calendaring</li>
+        <li>Procedural guidance for forms and filings</li>
     </ul>
 
     <p>
-        All services are non-legal in nature and do not constitute legal advice.
+        Services are tailored to small firms needing supplemental support without hiring full-time staff. 
+        We also provide guidance for self-represented individuals navigating complex paperwork.
     </p>
+
+    <p><strong>Disclaimer:</strong> We do not provide legal advice. All services are non-legal in nature. 
+    Clients should retain an attorney for any legal interpretation or representation.</p>
 </div>
 
 <footer>
