--- a/services.html
+++ b/services.html
@@ -17,45 +17,60 @@
 </header>
 
 <div class="container">
-    <p>Marietta Research Solutions provides specialized services for small businesses, law firms, and individuals. Click on each service to learn more.</p>
+    <p>
+        At Marietta Research Solutions, we offer a range of personalized services tailored to 
+        the unique needs of small businesses, law firms, inventors, and individuals. Click on 
+        each service to learn more.
+    </p>
 
-    <div class="services-grid">
-        <div class="service-card">
-            <img class="icon" src="images/icons/engineering.svg" alt="Engineering Icon">
-            <h3><a href="engineering.html">Electrical Engineering Consulting</a></h3>
-            <p>Expert guidance in antennas, radar, telecommunications, and robotics for startups and small businesses.</p>
-        </div>
-        <div class="service-card">
-            <img class="icon" src="images/icons/paralegal.svg" alt="Paralegal Icon">
-            <h3><a href="paralegal.html">Paralegal Services</a></h3>
-            <p>Document prep and administrative support for small law firms and solo practitioners. Non-legal advice.</p>
-        </div>
-        <div class="service-card">
-            <img class="icon" src="images/icons/patent.svg" alt="Patent Icon">
-            <h3><a href="patents.html">Patent Drafting Support</a></h3>
-            <p>Technical drafting, prior art research, and figures preparation for inventors and small businesses.</p>
-        </div>
-        <div class="service-card">
-            <img class="icon" src="images/icons/ai.svg" alt="AI Icon">
-            <h3><a href="ai.html">AI for Small Businesses & Law Firms</a></h3>
-            <p>Practical AI solutions for document automation, workflow efficiency, and business analysis.</p>
-        </div>
-        <div class="service-card">
-            <img class="icon" src="images/icons/prison.svg" alt="Prison Consulting Icon">
-            <h3><a href="prison-consulting.html">Prison Consulting</a></h3>
-            <p>Documentation, procedural guidance, and reentry planning for incarcerated individuals and families.</p>
-        </div>
-        <div class="service-card">
-            <img class="icon" src="images/icons/sbir.svg" alt="SBIR Icon">
-            <h3><a href="sbir.html">SBIR Grant Writing Support</a></h3>
-            <p>Technical and administrative support for SBIR/STTR proposals to help startups submit strong applications.</p>
-        </div>
-        <div class="service-card">
-            <img class="icon" src="images/icons/notary.svg" alt="Notary Icon">
-            <h3><a href="notary.html">Notary Public Services</a></h3>
-            <p>Commissioned Notary Public in Cobb County. By appointment at our Marietta office.</p>
-        </div>
-    </div>
+    <ul>
+        <li>
+            <a href="engineering.html"><strong>Electrical Engineering Consulting</strong></a><br>
+            Expert consulting for technical teams, startups, and small businesses in antennas, radar, 
+            telecommunications, and robotics. Senior-level guidance to help projects succeed.
+        </li>
+
+        <li>
+            <a href="paralegal.html"><strong>Paralegal Services</strong></a><br>
+            Administrative and document support for small law firms, solo practitioners, and individuals. 
+            Legal compliance assistance without providing legal advice.
+        </li>
+
+        <li>
+            <a href="patents.html"><strong>Patent Drafting Support</strong></a><br>
+            Technical support for drafting patent applications, preparing figures, and prior art research. 
+            Ideal for inventors and small businesses.
+        </li>
+
+        <li>
+            <a href="ai.html"><strong>AI for Small Businesses & Law Firms</strong></a><br>
+            Practical AI solutions to automate workflows, analyze documents, and increase efficiency 
+            for law firms and small businesses.
+        </li>
+
+        <li>
+            <a href="prison-consulting.html"><strong>Prison Consulting</strong></a><br>
+            Assistance for incarcerated individuals, families, and small organizations. Support includes 
+            form preparation, reentry guidance, and resource navigation.
+        </li>
+
+        <li>
+            <a href="sbir.html"><strong>SBIR Grant Writing Support</strong></a><br>
+            Proposal planning, technical narrative development, and grant submission assistance for 
+            startups and small tech businesses seeking SBIR/STTR funding.
+        </li>
+
+        <li>
+            <a href="notary.html"><strong>Notary Public Services</strong></a><br>
+            Commissioned Notary Public in Cobb County, Georgia. Document notarization available by appointment 
+            at our Marietta office.
+        </li>
+    </ul>
+
+    <p>
+        Each service is delivered with a focus on quality, efficiency, and personalized attention. 
+        We leverage senior-level expertise and a network of consultants to meet the exact needs of our clients.
+    </p>
 </div>
 
 <footer>
