--- a/contact.html
+++ b/contact.html
@@ -68,8 +68,8 @@
           <p class="muted">Fields marked with * are required.</p>
 
           <!-- Formspree example -->
-          <form action="https://formspree.io/f/YOUR_FORM_ID" method="POST" class="contact-form">
-
+          <form action="https://formspree.io/f/xykkyvoz" method="POST" class="contact-form">
+            
             <div class="form-row">
               <label for="name">Full Name *</label>
               <input id="name" name="name" type="text" placeholder="Your name" required />
@@ -94,7 +94,7 @@
               <label for="message">Message *</label>
               <textarea id="message" name="message" rows="6" placeholder="Write your message..." required></textarea>
             </div>
-
+            <input type="hidden" name="_next" value="thanks.html" />
             <button type="submit" class="btn primary">Send Message</button>
 
           </form>
