--- a/contact.html
+++ b/contact.html
@@ -2,123 +2,161 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Contact | Marietta Research Solutions</title>
-
-  <!-- IMPORTANT: make sure this path is correct -->
   <link rel="stylesheet" href="style.css" />
 </head>
-
 <body>
 
-  <!-- HEADER / NAV -->
-  <header class="site-header">
-    <div class="container header-inner">
-      <a class="logo" href="index.html">Marietta Research Solutions</a>
+<header>
+  <h1>Marietta Research Solutions</h1>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="services.html">Services</a>
+    <a href="contact.html">Contact</a>
+  </nav>
+</header>
 
-      <nav class="nav">
-        <a href="index.html">Home</a>
-        <a href="services.html">Services</a>
-        <a class="active" href="contact.html">Contact</a>
-      </nav>
+<div class="container">
+  <p>
+    Use the form below to request a consultation or ask a question.
+    We typically respond within 1–2 business days.
+  </p>
+
+  <div class="contact-grid">
+
+    <!-- Contact Info Card -->
+    <div class="contact-card">
+      <h2>Contact Information</h2>
+
+      <p>
+        <strong>Jim Maloney, PhD, MBA</strong><br />
+        Consulting Engineer / Paralegal
+      </p>
+
+      <p>
+        <strong>Phone:</strong>
+        <a href="tel:17702860254">770-286-0254</a><br />
+
+        <strong>Email:</strong>
+        <a href="mailto:jim@mariettaresearchsolutions.com">jim@mariettaresearchsolutions.com</a>
+      </p>
+
+      <p><strong>Business Address:</strong><br />
+        1640 Powers Ferry Rd SE<br />
+        Bldg 11, Suite 200<br />
+        Marietta, GA 30067
+      </p>
+
+      <p><strong>Hours:</strong> By appointment</p>
     </div>
-  </header>
 
-  <!-- MAIN -->
-  <main class="page">
-    <section class="container contact-grid">
+    <!-- Form Card -->
+    <div class="contact-card">
+      <h2>Send a Message</h2>
 
-      <!-- LEFT SIDE: INFO -->
-      <div class="contact-info">
-        <h1>Contact Us</h1>
-        <p class="lead">
-          Have a question or want to request a consultation? Send a message and we’ll get back to you.
+      <form action="https://formspree.io/f/xykkyvoz" method="POST">
+
+        <!-- Subject line for your inbox -->
+        <input type="hidden" name="_subject" value="New inquiry from MariettaResearchSolutions.com" />
+
+        <!-- Redirect to thanks page after successful submit -->
+        <input type="hidden" name="_next" value="thanks.html" />
+
+        <!-- Honeypot spam protection (bots fill this, humans won't) -->
+        <label class="hp-field" for="company">Company</label>
+        <input class="hp-field" id="company" name="company" type="text" tabindex="-1" autocomplete="off" />
+
+        <label for="name">Name</label>
+        <input id="name" name="name" type="text" autocomplete="name" required />
+
+        <label for="email">Email</label>
+        <input id="email" name="email" type="email" autocomplete="email" required />
+
+        <label for="phone">Phone (optional)</label>
+        <input id="phone" name="phone" type="tel" autocomplete="tel" />
+
+        <label for="contact_method">Preferred Contact Method</label>
+        <select id="contact_method" name="preferred_contact_method" required>
+          <option value="" selected disabled>Select one</option>
+          <option value="Email">Email</option>
+          <option value="Phone">Phone</option>
+          <option value="Either">Either</option>
+        </select>
+
+        <label for="service">Service of Interest</label>
+        <select id="service" name="service" required>
+          <option value="" selected disabled>Select one</option>
+          <option>Electrical Engineering Consulting</option>
+          <option>AI for Small Businesses & Law Firms</option>
+          <option>Paralegal Support & Document Preparation</option>
+          <option>Patent Drafting Support</option>
+          <option>SBIR Grant Writing Support</option>
+          <option>Prison Consulting & Reentry Support</option>
+          <option>Notary Public Services</option>
+          <option>Other</option>
+        </select>
+
+        <label for="message">Message</label>
+        <textarea id="message" name="message" rows="6" required
+          placeholder="Briefly describe what you need and your preferred timeline."></textarea>
+
+        <p class="fineprint">
+          <strong>Document sharing:</strong> Please do not send sensitive personal data or confidential legal strategy
+          through this form. If documents are needed, we will reply with a secure method to share files.
         </p>
 
-        <div class="info-card">
-          <h3>Marietta Research Solutions</h3>
-          <p>
-            <strong>Jim Maloney, PhD, MBA</strong><br />
-            Consulting Engineer / Paralegal
-          </p>
-
-          <p>
-            <strong>Phone:</strong>
-            <a href="tel:7702860254">(770) 286-0254</a>
-          </p>
-
-          <p>
-            <strong>Email:</strong>
-            <a href="mailto:jim@mariettaresearchsolutions.com">jim@mariettaresearchsolutions.com</a>
-          </p>
-
-          <p>
-            <strong>Address:</strong><br />
-            1519 Johnson Ferry Rd<br />
-            Bldg 11, Suite 200<br />
-            Marietta, GA 30062
-          </p>
+        <div class="checkbox-row">
+          <input id="disclaimer" name="disclaimer_acknowledged" type="checkbox" required />
+          <label for="disclaimer">
+            I understand Marietta Research Solutions does not provide legal advice or legal representation.
+            Paralegal/document services are non-legal support only.
+          </label>
         </div>
-      </div>
 
-      <!-- RIGHT SIDE: FORM -->
-      <div class="contact-form-wrap">
-        <div class="form-card">
-          <h2>Send a Message</h2>
-          <p class="muted">Fields marked with * are required.</p>
+        <button type="submit">Send</button>
 
-          <!-- Formspree example -->
-          <form action="https://formspree.io/f/xykkyvoz" method="POST" class="contact-form">
-            
-            <div class="form-row">
-              <label for="name">Full Name *</label>
-              <input id="name" name="name" type="text" placeholder="Your name" required />
-            </div>
+      </form>
 
-            <div class="form-row">
-              <label for="email">Email *</label>
-              <input id="email" name="email" type="email" placeholder="you@example.com" required />
-            </div>
-
-            <div class="form-row">
-              <label for="phone">Phone (optional)</label>
-              <input id="phone" name="phone" type="tel" placeholder="(770) 000-0000" />
-            </div>
-
-            <div class="form-row">
-              <label for="subject">Subject</label>
-              <input id="subject" name="subject" type="text" placeholder="How can we help?" />
-            </div>
-
-            <div class="form-row">
-              <label for="message">Message *</label>
-              <textarea id="message" name="message" rows="6" placeholder="Write your message..." required></textarea>
-            </div>
-            <input type="hidden" name="_next" value="thanks.html" />
-            <button type="submit" class="btn primary">Send Message</button>
-
-          </form>
-
-          <p class="small-note">
-            Prefer email? Contact us directly at
-            <a href="mailto:jim@mariettaresearchsolutions.com">jim@mariettaresearchsolutions.com</a>.
-          </p>
-        </div>
-      </div>
-
-    </section>
-  </main>
-
-  <!-- FOOTER -->
-  <footer class="site-footer">
-    <div class="container">
-      <p>© <span id="year"></span> Marietta Research Solutions. All rights reserved.</p>
+      <p class="fineprint">
+        By submitting this form, you consent to be contacted regarding your inquiry.
+      </p>
     </div>
-  </footer>
 
-  <script>
-    document.getElementById("year").textContent = new Date().getFullYear();
-  </script>
+  </div>
+
+  <hr class="divider" />
+
+  <h2>Important Notes</h2>
+  <ul class="notes">
+    <li><strong>No legal advice.</strong> Paralegal/document services are non-legal support and do not constitute legal advice or representation.</li>
+    <li><strong>Notary limitations.</strong> Notary services do not include document drafting, legal interpretation, or advice.</li>
+    <li><strong>Confidentiality.</strong> Please avoid sensitive personal data and confidential legal strategy in messages. Ask for a secure method to share documents if needed.</li>
+  </ul>
+</div>
+
+<footer>
+  © 2026 Marietta Research Solutions | Marietta, GA
+</footer>
+
+<!-- Back to Top Button -->
+<button id="backToTop" title="Back to Top">&#8679;</button>
+
+<script>
+  const backToTopBtn = document.getElementById("backToTop");
+
+  window.onscroll = function() {
+    if (document.body.scrollTop > 100 || document.documentElement.scrollTop > 100) {
+      backToTopBtn.style.display = "block";
+    } else {
+      backToTopBtn.style.display = "none";
+    }
+  };
+
+  backToTopBtn.addEventListener("click", function() {
+    window.scrollTo({ top: 0, behavior: "smooth" });
+  });
+</script>
 
 </body>
 </html>
