--- a/contact.html
+++ b/contact.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html> 
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Contact | Marietta Research Solutions</title>
-  <link rel="stylesheet" href="style.css?v=20260113" />
+  <link rel="stylesheet" href="./style.css?v=20260113">
 </head>
 <body>
   
