--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Marietta Research Solutions</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body>ok
 
 <header>
     <h1>Marietta Research Solutions</h1>
@@ -18,7 +18,8 @@
 
 <div class="hero">
     <h2>Personalized Professional Solutions</h2>
-    <p>Helping small businesses, law firms, inventors, and individuals achieve their goals efficiently.</p>
+    <p>Helping small businesses, law firms, inventors, </p>
+    <p>and individuals achieve their goals efficiently.</p>
 
     <!-- Hero Icons with Links -->
     <div class="hero-icons">
