--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
 <div class="hero">
     <h2>Personalized Professional Solutions</h2>
-    <p>Helping small businesses, law firms, inventors, </p>
-    <p>and individuals achieve their goals efficiently.</p>
-
+    <p> Helping small businesses, law firms, inventors, and individuals<br>
+        achieve their goals efficiently.
+    </p>
     <!-- Hero Icons with Links -->
     <div class="hero-icons">
         <a href="engineering.html">
