--- a/ai.html
+++ b/ai.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <head>
     <meta charset="UTF-8">
     <title>AI Consulting | Marietta Research Solutions</title>
