--- a/contact.html
+++ b/contact.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html> 
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Contact | Marietta Research Solutions</title>
-  <link rel="stylesheet" href="./style.css?v=20260113">
+  <title>Marietta Research Solutions</title>
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-  
+
 <header>
   <h1>Marietta Research Solutions</h1>
   <nav>
-    <a href="index.html">Home</a>
+    <a href="index.html" class="active">Home</a>
     <a href="services.html">Services</a>
     <a href="contact.html">Contact</a>
   </nav>
