--- a/contact.html
+++ b/contact.html
@@ -1,11 +1,10 @@
-<!DOCTYPE html> 
-<html lang="en">
+<!DOCTYPE 
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Marietta Research Solutions</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Contact | Marietta Research Solutions</title>
+  <link rel="stylesheet" href="style.css?v=20260113">
 </head>
 
 <body>
@@ -13,9 +12,9 @@
 <header>
   <h1>Marietta Research Solutions</h1>
   <nav>
-    <a href="index.html" class="active">Home</a>
+    <a href="index.html">Home</a>
     <a href="services.html">Services</a>
-    <a href="contact.html">Contact</a>
+    <a href="contact.html" class="active">Contact</a>
   </nav>
 </header>
 
