--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
         <input type="hidden" name="_subject" value="New inquiry from MariettaResearchSolutions.com" />
 
         <!-- Redirect to thanks page after successful submit -->
-        <input type="hidden" name="_next" value="thanks.html" />
+        <input type="hidden" name="_next" value="https://jmaloney1965.github.io/Marietta-site/thanks.html" />
 
         <!-- Honeypot spam protection (bots fill this, humans won't) -->
         <label class="hp-field" for="company">Company</label>
