--- a/contact.html
+++ b/contact.html
@@ -64,6 +64,9 @@
 
         <!-- Redirect to thanks page after successful submit -->
         <input type="hidden" name="_next" value="https://jmaloney1965.github.io/Marietta-site/thanks.html" />
+        <input type="hidden" name="_replyto" value="">
+        <input id="email" name="_replyto" type="email" autocomplete="email" required />
+  
 
         <!-- Honeypot spam protection (bots fill this, humans won't) -->
         <label class="hp-field" for="company">Company</label>
