--- a/index.html
+++ b/index.html
@@ -19,14 +19,17 @@
 
 <body>
 
-<header>
-  <h1>Marietta Research Solutions</h1>
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="services.html">Services</a>
-    <a href="contact.html">Contact</a>
-    <a href="contact.html">Request Consult</a>
-  </nav>
+<header class="site-header">
+  <div class="header-wrap">
+    <h1 class="site-title">Marietta Research Solutions</h1>
+
+    <nav class="site-nav">
+      <a href="index.html">Home</a>
+      <a href="services.html">Services</a>
+      <a href="contact.html">Contact</a>
+      <a href="contact.html">Request Consult</a>
+    </nav>
+  </div>
 </header>
 
 <div class="hero">
