--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
     <nav class="site-nav">
       <a href="index.html">Home</a>
       <a href="services.html">Services</a>
-      <a href="contact.html">Contact</a>
-      <a href="contact.html">Consult</a>
+      <a href="contact.html">Contact / Consult</a>
     </nav>
   </div>
 </header>
