--- a/contact.html
+++ b/contact.html
@@ -16,16 +16,15 @@
   <meta name="description" content="Contact Marietta Research Solutions to request a consultation or ask a question. Typically responds within 1–2 business days." />
 </head>
 
-<body>
+<header class="site-header">
+  <div class="header-wrap">
+    <h1 class="site-title">Marietta Research Solutions</h1>
 
-<header>
-  <h1>Marietta Research Solutions</h1>
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="services.html">Services</a>
-    <a href="contact.html">Contact</a>
-    <a href="contact.html">Request Consult</a>
-  </nav>
+    <nav class="site-nav">
+      <a href="index.html">Home</a>
+      <a href="services.html">Services</a>
+    </nav>
+  </div>
 </header>
 
 <div class="container">
