--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     <h1 class="site-title">Marietta Research Solutions</h1>
 
     <nav class="site-nav">
-      <a href="index.html">Home</a>
       <a href="services.html">Services</a>
+      <a href="about.html">About</a>
       <a href="contact.html">Contact / Consult</a>
     </nav>
   </div>
