--- a/ai.html
+++ b/ai.html
@@ -59,7 +59,11 @@
 </div>
 
 <footer>
-  © 2026 Marietta Research Solutions | Marietta, GA
+  <p>
+    © 2026 Marietta Research Solutions<br />
+    1640 Powers Ferry Rd SE, Bldg 11, Suite 200, Marietta, GA 30067<br />
+    <a href="privacy.html">Privacy</a>
+  </p>
 </footer>
 
 </body>
