--- a/ai.html
+++ b/ai.html
@@ -61,7 +61,9 @@
 <footer>
   <p>
     © 2026 Marietta Research Solutions<br />
-    1640 Powers Ferry Rd SE, Bldg 11, Suite 200, Marietta, GA 30067<br />
+    1640 Powers Ferry Rd SE<br />
+    Bldg 11, Suite 200<br />
+    Marietta, GA 30067<br />
     <a href="privacy.html">Privacy</a>
   </p>
 </footer>
