--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+hi<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -124,10 +124,14 @@
     <li><strong>3) Support</strong> — We provide organized deliverables and follow-up as needed.</li>
   </ul>
 
-</div>
-
 <footer>
-  © 2026 Marietta Research Solutions | Marietta, GA
+  <p>
+    © 2026 Marietta Research Solutions<br />
+    1640 Powers Ferry Rd SE<br />
+    Bldg 11, Suite 200<br />
+    Marietta, GA 30067<br />
+    <a href="privacy.html">Privacy</a>
+  </p>
 </footer>
 
 <!-- Back to Top Button -->
