--- a/contact.html
+++ b/contact.html
@@ -150,7 +150,13 @@
 </div>
 
 <footer>
-  © 2026 Marietta Research Solutions | Marietta, GA
+  <p>
+    © 2026 Marietta Research Solutions<br />
+    1640 Powers Ferry Rd SE<br />
+    Bldg 11, Suite 200<br />
+    Marietta, GA 30067<br />
+    <a href="privacy.html">Privacy</a>
+  </p>
 </footer>
 
 <!-- Back to Top Button -->
