--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@ hi<!DOCTYPE html>
 
     <nav class="site-nav">
       <a href="services.html">Services</a>
+      <a href="faq.html">FAQ</a>
       <a href="about.html">About</a>
-      <a href="contact.html">Contact / Consult</a>
     </nav>
   </div>
 </header>
