--- a/faq.html
+++ b/faq.html
@@ -6,16 +6,29 @@
   <title>FAQ | Marietta Research Solutions</title>
 
   <link rel="stylesheet" href="style.css" />
-  <link rel="icon" href="favicon.svg" type="image/svg+xml">
-  <link rel="icon" href="favicon-32.png" sizes="32x32" type="image/png">
-  <link rel="icon" href="favicon-16.png" sizes="16x16" type="image/png">
-  <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
-  <link rel="manifest" href="manifest.json">
-  <meta name="theme-color" content="#1f3a5f">
+  <!-- Favicons -->
+  <link rel="icon" href="favicon.svg" type="image/svg+xml" />
+  <link rel="icon" href="favicon-32.png" sizes="32x32" type="image/png" />
+  <link rel="icon" href="favicon-16.png" sizes="16x16" type="image/png" />
+  <link rel="apple-touch-icon" href="apple-touch-icon.png" />
 
-  <meta name="description" content="Frequently asked questions for Marietta Research Solutions: services, process, confidentiality, and disclaimers." />
+  <meta name="description" content="Frequently asked questions about Marietta Research Solutions services, turnaround times, consultation process, and disclaimers." />
 </head>
+
+<body>
+
+<header class="site-header">
+  <div class="header-wrap">
+    <h1 class="site-title">Marietta Research Solutions</h1>
+
+    <nav class="site-nav">
+      <a href="index.html">Home</a>
+      <a href="services.html">Services</a>
+      <a href="contact.html">Contact / Consult</a>
+    </nav>
+  </div>
+</header>
 
 <body>
 
