--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@ hi<!DOCTYPE html>
     1640 Powers Ferry Rd SE<br />
     Bldg 11, Suite 200<br />
     Marietta, GA 30067<br />
+        <a href="contact.html">Contact / Consult</a> |
     <a href="privacy.html">Privacy</a>
   </p>
 </footer>
