--- a/about.html
+++ b/about.html
@@ -139,6 +139,12 @@
         <strong>Email:</strong><br />
         <a href="mailto:jim@mariettaresearchsolutions.com">jim@mariettaresearchsolutions.com</a>
       </p>
+      
+      <p>
+        <strong>Email:</strong><br />
+        <a href="mailto:susan@mariettaresearchsolutions.com">susan@mariettaresearchsolutions.com</a><br />
+        <a href="mailto:jim@mariettaresearchsolutions.com">jim@mariettaresearchsolutions.com</a>
+       </p>
 
       <p>
         <strong>Phone:</strong><br />
