--- a/index.html
+++ b/index.html
@@ -83,11 +83,14 @@
     <li><strong>Fast turnaround:</strong> responsive support for busy clients</li>
     <li><strong>Organized outputs:</strong> clean documents and usable deliverables</li>
   </ul>
-
+  
   <div class="cta-row">
-    <a class="btn" href="services.html">View Services</a>
-    <a class="btn btn-outline" href="contact.html">Contact / Consult</a>
-  </div>
+     <a class="btn" href="services.html">View Services</a>
+     <a class="btn btn-outline" href="MRS_Capabilities_OnePager_HighContrastPrint.pdf" target="_blank" rel="noopener">
+    Capabilities (PDF)
+  </a>
+  <a class="btn btn-outline" href="contact.html">Contact / Consult</a>
+</div>
 
   <hr class="divider" />
 
