--- a/index.html
+++ b/index.html
@@ -85,13 +85,13 @@
   </ul>
   
   <div class="cta-row">
-     <a class="btn" href="services.html">View Services</a>
-     <a class="btn btn-outline" href="MRS_Capabilities_OnePager_HighContrastPrint.pdf" target="_blank" rel="noopener">
+  <a class="btn" href="services.html">View Services</a>
+  <a class="btn btn-outline" href="capabilities.pdf" target="_blank" rel="noopener">
     Capabilities (PDF)
   </a>
   <a class="btn btn-outline" href="contact.html">Contact / Consult</a>
 </div>
-
+  
   <hr class="divider" />
 
   <h3>Leadership</h3>
