--- a/about.html
+++ b/about.html
@@ -142,10 +142,11 @@
         <a href="mailto:jim@mariettaresearchsolutions.com">jim@mariettaresearchsolutions.com</a>
        </p>
 
-      <p>
-        <strong>Phone:</strong><br />
-        <a href="tel:17702860254">770-286-0254</a>
-      </p>
+        <p>
+  <strong>Phone:</strong><br />
+  <strong>Jim:</strong> <a href="tel:17702860254">770-286-0254</a>
+</p>
+      
 
       <p>
         <strong>Business Address:</strong><br />
