--- a/services.html
+++ b/services.html
@@ -127,8 +127,11 @@
     1640 Powers Ferry Rd SE<br />
     Bldg 11, Suite 200<br />
     Marietta, GA 30067<br />
+    
     <a href="contact.html">Contact / Consult</a> |
-    <a href="privacy.html">Privacy</a>
+<a href="capabilities.pdf" target="_blank" rel="noopener">Capabilities (PDF)</a> |
+<a href="privacy.html">Privacy</a>
+
   </p>
 </footer>
 
