--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@
     we focus on clarity, organization, and practical results.
   </p>
 
+<hr class="divider" />
+
   <h3>Professional, Clear, and Efficient</h3>
   <ul>
     <li><strong>Clear scope:</strong> defined deliverables and expectations</li>
