--- a/about.html
+++ b/about.html
@@ -177,7 +177,9 @@
     Bldg 11, Suite 200<br />
     Marietta, GA 30067<br />
     <a href="contact.html">Contact / Consult</a> |
-    <a href="privacy.html">Privacy</a>
+    <a href="capabilities.pdf" target="_blank" rel="noopener">Capabilities (PDF)</a> |
+    <a href="privacy.html">Privacy</a><br />
+    <span class="last-updated">Last updated: January 2026</span>
   </p>
 </footer>
 
