--- a/contact.html
+++ b/contact.html
@@ -161,8 +161,8 @@
     1640 Powers Ferry Rd SE<br />
     Bldg 11, Suite 200<br />
     Marietta, GA 30067<br />
-    <a href="contact.html">Contact / Consult</a>
-    <a href="capabilities.pdf" target="_blank" rel="noopener">Capabilities (PDF)</a> 
+    <a href="contact.html">Contact / Consult</a> |
+    <a href="capabilities.pdf" target="_blank" rel="noopener">Capabilities (PDF)</a> |
     <a href="privacy.html">Privacy</a>
   </p>
 </footer>
