--- a/faq.html
+++ b/faq.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+#<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -120,6 +120,7 @@
     Bldg 11, Suite 200<br />
     Marietta, GA 30067<br />
     <a href="contact.html">Contact / Consult</a> |
+        <a href="capabilities.pdf" target="_blank" rel="noopener">Capabilities (PDF)</a> |
     <a href="privacy.html">Privacy</a>
   </p>
 </footer>
