--- a/thanks.html
+++ b/thanks.html
@@ -60,6 +60,7 @@
     Bldg 11, Suite 200<br />
     Marietta, GA 30067<br />
     <a href="contact.html">Contact / Consult</a> |
+        <a href="capabilities.pdf" target="_blank" rel="noopener">Capabilities (PDF)</a> |
     <a href="privacy.html">Privacy</a>
   </p>
 </footer>
