--- a/about.html
+++ b/about.html
@@ -162,14 +162,14 @@
     </div>
   </div>
 
-  <p class="last-updated">Last updated: January 2026</p>
-
   <div class="cta-row">
     <a class="btn" href="services.html">Explore Services</a>
     <a class="btn btn-outline" href="contact.html">Contact / Consult</a>
   </div>
 </div>
 
+    <span class="last-updated">Last updated: January 2026</span>
+  
 <footer>
   <p>
     © 2026 Marietta Research Solutions<br />
