--- a/ai.html
+++ b/ai.html
@@ -120,6 +120,8 @@
   </div>
 </div>
 
+    <span class="last-updated">Last updated: January 2026</span>
+  
 <footer>
   <p>
     © 2026 Marietta Research Solutions<br />
