--- a/contact.html
+++ b/contact.html
@@ -155,6 +155,8 @@
   </ul>
 </div>
 
+    <span class="last-updated">Last updated: January 2026</span>
+
 <footer>
   <p>
     © 2026 Marietta Research Solutions<br />
