--- a/contact.html
+++ b/contact.html
@@ -155,8 +155,7 @@
   </ul>
 </div>
 
-    <span class="last-updated">Last updated: January 2026</span>
-
+<p class="last-updated">Last updated: January 2026</p>
 <footer>
   <p>
     © 2026 Marietta Research Solutions<br />
