--- a/engineering.html
+++ b/engineering.html
@@ -107,6 +107,8 @@
   </div>
 </div>
 
+<p class="last-updated">Last updated: January 2026</p>
+
 <footer>
   <p>
     © 2026 Marietta Research Solutions<br />
