--- a/index.html
+++ b/index.html
@@ -126,6 +126,8 @@
   </div>
 </div>
 
+<p class="last-updated">Last updated: January 2026</p>
+
 <footer>
   <p>
     © 2026 Marietta Research Solutions<br />
