--- a/privacy.html
+++ b/privacy.html
@@ -136,6 +136,8 @@
   <p class="last-updated">Last updated: January 2026</p>
 </div>
 
+<p class="last-updated">Last updated: January 2026</p>
+
 <footer>
   <p>
     © 2026 Marietta Research Solutions<br />
