--- a/thanks.html
+++ b/thanks.html
@@ -53,6 +53,8 @@
   </p>
 </div>
 
+<p class="last-updated">Last updated: January 2026</p>
+
 <footer>
   <p>
     © 2026 Marietta Research Solutions<br />
