--- a/ai.html
+++ b/ai.html
@@ -6,6 +6,7 @@
   <title>AI for Small Businesses & Law Firms | Marietta Research Solutions</title>
 
   <link rel="stylesheet" href="style.css" />
+<link rel="manifest" href="manifest.json" />
 
   <!-- Favicons -->
   <link rel="icon" href="favicon.svg" type="image/svg+xml" />
