--- a/prison-consulting.html
+++ b/prison-consulting.html
@@ -6,7 +6,7 @@
   <title>Prison Consulting & Reentry Support | Marietta Research Solutions</title>
 
   <link rel="stylesheet" href="style.css" />
-
+<link rel="manifest" href="manifest.json" />
   <!-- Favicons -->
   <link rel="icon" href="favicon.svg" type="image/svg+xml" />
   <link rel="icon" href="favicon-32.png" sizes="32x32" type="image/png" />
