--- a/contact.html
+++ b/contact.html
@@ -82,6 +82,7 @@
 
         <!-- Keep _next (harmless), but JS will control redirect -->
         <input type="hidden" name="_next" value="https://jmaloney1965.github.io/Marietta-site/thanks.html" />
+<input type="hidden" name="_format" value="plain" />
 
         <!-- Honeypot spam protection (bots fill this, humans won't) -->
         <label class="hp-field" for="company">Company</label>
