--- a/engineering.html
+++ b/engineering.html
@@ -44,6 +44,13 @@
 <div class="container">
   <h2>Electrical Engineering Consulting</h2>
 
+<p>
+  Practical electrical engineering consulting for antennas, RF systems, numerical modeling, and telecommunications.
+  We deliver clear documentation, measurable technical outputs, and professional turnaround.
+</p>
+
+<hr class="divider" />
+
   <p>
     Marietta Research Solutions provides practical, one-to-one engineering support for clients who need
     clear technical insight, organized documentation, and high-quality deliverables.
