--- a/ai.html
+++ b/ai.html
@@ -44,7 +44,12 @@
 
 <div class="container">
   <h2>AI for Small Businesses &amp; Law Firms</h2>
+<p>
+  Practical AI support for small organizations that want faster workflows, cleaner documentation, and better client service.
+  We focus on real-world automation you can actually use—without complicated systems or enterprise overhead.
+</p>
 
+<hr class="divider" /> 
   <p>
     Marietta Research Solutions helps small teams use AI responsibly to save time, improve consistency,
     and reduce repetitive work. Our focus is practical implementation: templates, workflows, and automation
