--- a/services.html
+++ b/services.html
@@ -39,13 +39,6 @@
     we focus on clear deliverables and practical results.
   </p>
 
-  <div class="cta-row">
-    <a class="btn" href="contact.html">Contact / Consult</a>
-    <a class="btn btn-outline" href="capabilities.pdf" target="_blank" rel="noopener">
-      Capabilities (PDF)
-    </a>
-  </div>
-
   <hr class="divider" />
 
   <div class="section-panel">
@@ -110,6 +103,16 @@
     </div>
   </div>
 
+  <hr class="divider" />
+
+  <!-- Buttons moved here: bottom above Important Notes -->
+  <div class="cta-row">
+    <a class="btn" href="contact.html">Contact / Consult</a>
+    <a class="btn btn-outline" href="capabilities.pdf" target="_blank" rel="noopener">
+      Capabilities (PDF)
+    </a>
+  </div>
+  
   <hr class="divider" />
 
   <h3>Important Notes</h3>
