--- a/paralegal.html
+++ b/paralegal.html
@@ -44,6 +44,13 @@
 <div class="container">
   <h2>Paralegal Support &amp; Document Preparation</h2>
 
+
+<p>
+  Professional document preparation and administrative support for individuals and small firms.
+  We help you stay organized, complete forms correctly, and prepare professional filings—without providing legal advice.
+</p>
+
+<hr class="divider" />
   <p>
     Marietta Research Solutions provides professional, non-legal support to help law firms and individuals
     stay organized, meet deadlines, and present clean, consistent documents. Our work focuses on
