--- a/patents.html
+++ b/patents.html
@@ -44,6 +44,13 @@
 <div class="container">
   <h2>Patent Drafting Support</h2>
 
+<p>
+  Technical drafting support for inventors and engineering teams preparing patent materials.
+  We help organize invention disclosures, technical descriptions, figures, and supporting documentation for attorney review.
+</p>
+
+<hr class="divider" />
+
   <p>
     Marietta Research Solutions helps inventors and technical teams translate complex ideas into clear,
     organized technical documentation that supports patent preparation. We provide structured drafting
